--- a/wildcatweb/src/translations/es/es.json
+++ b/wildcatweb/src/translations/es/es.json
@@ -82,10 +82,10 @@
 
         "text_only": {
             "templates": {
-                "motor_action": "Después, {port} gira hacia {direction} a {speed} velocidad.",
-                "motor_stop": "Luego, {port} para de girar.",
-                "wait_action": "Después, el robot espera {seconds} segundos.",
-                "button_action": "El robot pausa la ejecución hasta que el botón en {port} esté {condition}."
+                "motor_action": "{port} gira hacia {direction} a {speed} velocidad.",
+                "motor_stop": "{port} para de girar.",
+                "wait_action": "el robot espera {seconds} segundos.",
+                "button_action": "el robot pausa la ejecución hasta que el botón en {port} esté {condition}."
             }
         }
     }
