some improvements but still not working right
has a new error to fix later... Warning: Maximum update depth exceeded

--- a/wildcatweb/src/translations/en/en.json
+++ b/wildcatweb/src/translations/en/en.json
@@ -84,7 +84,7 @@
             "templates": {
                 "motor_action": "{port} rotates {direction} at {speed} speed.",
                 "motor_stop": "{port} stops rotating.",
-                "wait_action": "the robot waits for {seconds} seconds.",
+                "wait_action": "The robot waits for {seconds} seconds.",
                 "button_action": "The robot pauses execution until the button on {port} is {condition}."
             }
         }
