clockwise for forward

--- a/wildcatweb/src/translations/en/en.json
+++ b/wildcatweb/src/translations/en/en.json
@@ -9,8 +9,8 @@
         "motorF": "Motor F",
 
         "direction": "Direction",
-        "forward": "clockwise",
-        "backward": "counterclockwise",
+        "clockwise": "clockwise",
+        "countercw": "counterclockwise",
         "stopped": "stopped",
 
         "speed": "speed",
