--- a/wildcatweb/src/translations/es/es.json
+++ b/wildcatweb/src/translations/es/es.json
@@ -9,8 +9,8 @@
         "motorF": "Motor F",
 
         "direction": "Dirección",
-        "forward": "horario",
-        "backward": "antihorario",
+        "clockwise": "horario",
+        "countercw": "antihorario",
         "stopped": "parado",
 
         "speed": "velocidad",
