--- a/wildcatweb/src/translations/es/es.json
+++ b/wildcatweb/src/translations/es/es.json
@@ -55,7 +55,7 @@
         "yellow": "amarillo",
         "white": "blanco",
         "black": "negro",
-        "magenta": "magenta",
+        "pink": "pink",
         "orange": "naranja",
         "azure": "azur"
     },
